@@ -1,5 +1,8 @@
 2002-06-24  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* lily/text-spanner.cc (setup_pedal_bracket): Bugfix: only
+	dereference valid Grob.
+
 	* configure.in: Quoting fixes.
 
 2002-06-24  Han-Wen  <hanwen@cs.uu.nl>
